[package]
name = "socks5_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hex ="0.4"
aes = "0.7"
block-modes = "0.8"
hex-literal = "0.3"
ctr = "0.8"
native-tls = "0.2"
tokio-native-tls = "0.3"
anyhow = "1.0"
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "0.2"
